manifests/overlays/local/patches/services-nodeport.yaml
# SPDX-FileCopyrightText: 2026 AGENZIA TPL BACINO CITTA' METROPOLITANA MILANO, MONZA E BRIANZA, LODI, PAVIA
# SPDX-License-Identifier: EUPL-1.2
# Expose UI and API services via NodePort for local access.
# NodePort range is 30000-32767. We use 30xxx to echo the rpsd port schema
# (19xxx -> 30xxx offset, 20xxx -> 30xxx offset) as closely as possible.
#
# Alternatively, skip this patch and use kubectl port-forward for exact ports:
#   kubectl port-forward -n rpsd svc/kafka-ui 19010:8080
#   kubectl port-forward -n rpsd svc/prefect 19200:4200
#   kubectl port-forward -n rpsd svc/keycloak 19300:8080
#   kubectl port-forward -n rpsd svc/rpsd-ingest 20000:8000
#   kubectl port-forward -n rpsd svc/rpsd-config 20100:8000

apiVersion: v1
kind: Service
metadata:
  name: kafka-ui
spec:
  type: NodePort
  ports:
    - name: http
      port: 8080
      targetPort: 8080
      nodePort: 30010
---
apiVersion: v1
kind: Service
metadata:
  name: rabbitmq
spec:
  type: NodePort
  ports:
    - name: amqp
      port: 5672
      targetPort: 5672
    - name: management
      port: 15672
      targetPort: 15672
      nodePort: 30110
---
apiVersion: v1
kind: Service
metadata:
  name: prefect
spec:
  type: NodePort
  ports:
    - name: http
      port: 4200
      targetPort: 4200
      nodePort: 30200
---
apiVersion: v1
kind: Service
metadata:
  name: keycloak
spec:
  type: NodePort
  ports:
    - name: http
      port: 8080
      targetPort: 8080
      nodePort: 30300
    - name: health
      port: 9000
      targetPort: 9000
---
apiVersion: v1
kind: Service
metadata:
  name: rpsd-ingest
spec:
  type: NodePort
  ports:
    - name: http
      port: 8000
      targetPort: 8000
      nodePort: 30000
---
apiVersion: v1
kind: Service
metadata:
  name: rpsd-config
spec:
  type: NodePort
  ports:
    - name: http
      port: 8000
      targetPort: 8000
      nodePort: 30100
